# mcp-server-max

./: README.md  README.ru.md  pyproject.toml
src/mcp_server_max/: __init__.py  __main__.py  server.py
