[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-max-messenger"
version = "0.2.0"
description = "MCP server for Max messenger (formerly VK Teams) — send/read messages, manage chats via Model Context Protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ivan Ponomarev", email = "baho7726417@yandex.ru"},
]
keywords = ["mcp", "max", "vk-teams", "messenger", "chat", "model-context-protocol", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Baho73/mcp-server-max"
Repository = "https://github.com/Baho73/mcp-server-max"
Issues = "https://github.com/Baho73/mcp-server-max/issues"

[project.scripts]
mcp-server-max = "mcp_server_max.server:main"
